# project_initializer

./: .gitignore  CLI.c  CLI.h  CMakeLists.c  CMakeLists.h  CMakeLists.txt  build_script.c  build_script.h  check_overwrite.c  check_overwrite.h  configure.sh  configure_script.c  configure_script.h  copyfile.c  copyfile.h  debug.sh  debug_script.c  debug_script.h  file_to_buf.c  file_to_buf.h  gitignore.c  gitignore.h  main.c  program_arena.c  program_arena.h  project_initializerConfig.h.in  run.sh  run_script.c  run_script.h  source_files.c  source_files.h
assets/: CMakeLists.txt.txt  config_header.txt  configure.sh.txt  debug.sh.txt  gitignore_template.txt  main.c.txt  run.sh.txt
